css/style.css
/* ... */
.footer-bottom-wrapper .container .footer_bottom .grid {
  width: 100%;
  max-width: 1272px;
  margin: 0 auto;
  /* padding: 0 16px; */
}
.footer-bottom-wrapper .container .footer_bottom .footer_bottom-container {
  padding: 24px 84px;
}
.footer-bottom-wrapper .container .footer_bottom .footer_bottom-container .footer_social {
  display: flex;
  align-items: center;
  justify-content: center;
}
.footer-bottom-wrapper .container .footer_bottom .footer_bottom-container .footer_social .footer_social-image {
  max-width: 100%;
  padding: 0 40px;
}
.footer-bottom-wrapper .container .footer_bottom .footer_bottom-container .footer_copyright {
  font-weight: 400;
  font-size: 32px;
  line-height: 100%;
  color: #3e50af;
  text-align: center;
  margin-top: 16px;
}
.footer-bottom-wrapper .container .footer_bottom .footer_bottom-container .footer_copyright p {
  margin: 0;
}

@media screen and (max-width: 1240px) {
  .box-head .title-content .title {
    font-size: 50px;
  }
  .box-head .description {
    font-size: 22px;
    line-height: 30px;
  }
}
@media screen and (max-width: 1024px) {
  #page .search-page {
    margin-top: 5%;
  }
  .box-head .title-content h2 {
    font-size: 35px;
    line-height: 100px;
  }
  .box-head .title-content .title {
    font-size: 48px;
    line-height: 56px;
  }
  .box-head .description {
    font-size: 32px;
    line-height: 38px;
  }
  .header-fix {
    padding: 0px 40px;
  }
  .header-fix .logo {
    width: 50px;
    height: 50px;
  }
  .header-fix .main-menu {
    gap: 8px;
  }
  .header-fix .main-menu li {
    padding: 8px 12px;
  }
  .header-fix .main-menu li a {
    font-size: 14px;
  }
  .header-fix .menu-action .primary-button {
    padding: 6px 16px;
  }
  #process .process-content .process-tab .tab-title .process-icon .icon-six ::after {
    left: 82%;
  }
  .search-page .container .search-box {
    margin-top: 12%;
  }
}
@media screen and (max-width: 991px) {
  .header-image-mobile img {
    max-width: 100%;
  }
  .ncctheme-m-menu > li:nth-child(1) a::after {
    right: calc(50% - 50px);
  }
  .ncctheme-m-menu > li:nth-child(1) a:hover {
    left: 0;
  }
  .ncctheme-m-menu > li:nth-child(1) a:hover::after {
    right: calc(50% - 40px);
  }
  .ncctheme-m-menu > li:last-child a::after {
    right: calc(50% - 55px);
  }
  .ncctheme-m-menu > li:last-child a:hover {
    background-color: white;
  }
  .ncctheme-m-menu > li a:hover {
    background-color: #aabff2;
  }
  .menu-action {
    flex-direction: column;
    justify-content: center;
    gap: 32px;
    margin-top: -45px;
  }
  .menu-action .apply-button {
    order: 2;
    padding: 8px 77px;
  }
  .menu-action .apply-button:hover {
    background-color: #d62332;
  }
  .menu-action ul {
    order: 1;
    padding-left: 0;
  }
  .menu-action ul li {
    cursor: pointer;
  }
  body.menu-active .site {
    height: 100vh;
    overflow: hidden;
  }
  .home #content {
    z-index: 0;
  }
  .site-title img {
    width: 40px;
    height: 40px;
  }
  .header-fix,
  .header-fix.scrolled {
    justify-content: space-between;
    height: 72px;
  }
  .header-fix .main-menu,
  .header-fix .menu-action,
  .header-fix.scrolled .main-menu,
  .header-fix.scrolled .menu-action {
    display: none;
  }
  .header-fix .menu-toggler-fix,
  .header-fix.scrolled .menu-toggler-fix {
    display: flex;
  }
  .header-fix .menu-toggler-fix .hydrated,
  .header-fix.scrolled .menu-toggler-fix .hydrated {
    font-size: 30px;
    color: #3e50af;
    font-weight: bold;
  }
  .search-toggler:before {
    display: none;
  }
  .main-slider.menu-active {
    clip-path: unset !important;
  }
  .main-slider .text-head {
    font-size: 60px;
    line-height: 73px;
  }
  .main-slider .text-description {
    font-size: 20px;
    line-height: 30px;
  }
  .primary-button.large {
    font-size: 26px;
    padding: 8px 12px 4px;
  }
}
/* ... */

